<resources>
    <string name="app_name">Orbis</string>

    <!-- MainMenuActivity -->
    <string name="welcome_message">Welcome to Orbis</string>

    <!-- Gallery -->
    <string name="gallery_title">Your 3D pictures</string>
    <string name="title_activity_vrviewer">VRViewerActivity</string>

    <!-- Import -->
    <string name="import_activity_title">Add Images</string>
    <string name="image_name">Save as:</string>
    <string name="image_name_hint">e.g. \'3dimage\'</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>

    <!-- Combine -->
    <string name="select_image">Select an image</string>
    <string name="select">Select</string>

    <!-- Guides menu -->
    <string name="guides_menu_title">Orbis Guides (more coming soon)</string>

    <!-- VR viewer -->
    <string name="diashow_started">Diashow started</string>
    <string name="diashow_ended">Diashow stopped</string>

    <!-- Diashow settings (TODO for a later release) -->
    <string name="diashow_settings_title">Diashow Settings</string>

    <!-- Initial welcome screen -->
    <string name="iw_choose">Please choose one of the following options:</string>
    <string name="iw_bought">I have bought an Orbis VR headset</string>
    <string name="iw_not_bought">I have not bought an Orbis VR headset</string>

    <!-- Verify purchase screen -->
    <string name="vp_instructions">To unlock the app, press the \'unlock now\' button below. This will open a dialog window asking you to purchase the app. DO NOT CLICK ON \'BUY\'! Rather, tap the price label, which will bring up several options. Select redeem and enter the code you received at the time of purchase or by e-mail.</string>
    <string name="vp_unlock">Unlock now</string>
    <string name="vp_back">Go back</string>
    <string name="np_info">Welcome to Orbis VR! By downloading this app, you have started a 7-day free trial. After this period, you can choose to purchase the app to continue using it.</string> <!-- TODO should be improved -->
    <string name="np_start">Try it out!</string>

</resources>
