<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/iw_title_height"
        android:src="@drawable/ic_welcome_to_orbis_3"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/iw_q_text_size"
        android:layout_marginTop="20dp"
        android:text="@string/iw_choose"
        android:id="@+id/choice"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:clipToPadding="false">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/iw_bought"
            android:background="@null"
            android:elevation="2dp"
            android:layout_marginRight="@dimen/iw_b_distance"
            android:textSize="@dimen/iw_b_text_size"
            android:textAllCaps="false"
            android:onClick="bought"
            android:id="@+id/bought"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/iw_not_bought"
            android:background="@null"
            android:elevation="2dp"
            android:textSize="@dimen/iw_b_text_size"
            android:textAllCaps="false"
            android:onClick="notBought"
            android:id="@+id/not_bought"/>
    </LinearLayout>

</LinearLayout>